@startuml DiagramaClasses

abstract class Produto {
    -nome: String
    -preco: double
    -descricao: String
}
class DefaultEntity{
    -id: Long
    -dataCadastro: Date
}

enum CorPeca {
    PRETO
    BRANCO
}

class Material {
    -id: int
    -tipo: String
}

class Peca {
    -cor: CorPeca
    -tipo: TipoPeca
}
class KitPeca {
    -itemKits: List<ItemKit>
}
enum TipoPeca {
    REI
    RAINHA
    TORRE
    BISPO
    CAVALO
    PEAO
}

class Tabuleiro {
    -tamanho: String
    -cor: String
}

class Relogio {
    -modelo: String
    -tipo: TipoRelogio
}
enum TipoRelogio {
    ANALOGICO
    DIGITAL
}
class JogoCompleto {
}

class Fabricante {
    -id: int
    -nome: String
    -cnpj: String
    -telefone: String
}
class ItemKit {
    -int: quantidade
}

'---------------- HERANÇA ----------------

Produto <|-- KitPeca
Produto <|-- Tabuleiro
Produto <|-- Relogio
Produto <|-- JogoCompleto

'---------------- COMPOSIÇÃO ----------------

KitPeca "1" *-- "1..*" ItemKit
ItemKit "*" --> "1" Peca

'---------------- AGREGAÇÃO ----------------
JogoCompleto "*" o-- "1" Tabuleiro
JogoCompleto "*" o-- "1" KitPeca

Peca "*" o-- "1" Material
Tabuleiro "*" o-- "1" Material

'---------------- ASSOCIAÇÃO ----------------

Produto "*" --> "1" Fabricante

@enduml
